# INF2004-ESP-Project

./: README.md
driver/encoder/: encoder.c
driver/integration/: test_project.c
driver/irline/: barcode_reader.c
driver/magnometer/: CMakeLists.txt  projectMagnetometer.c
driver/motor/: motor.c
driver/motorandwheel/: motorandwheel.c
driver/ultrasonic/: ultrasonic.c
driver/wifi/: CMakeLists.txt  car_wifi.c
driver/wifi/tcp-client/: tcp_client.c
partial integration/: straight line + turning + ultrasonic.c
partial integration/car_wifi + barcode scanner/: CMakeLists.txt  car_wifi.c  lwipopts.h
partial integration/car_wifi + barcode scanner/tcp-client/: tcp_client.c
testing/: barcode_whitebox.docx  ultrasonic_whitebox.docx
